--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 </div>
 
 <!-- AUDIO -->
-<audio id="rollSound" src="https://assets.mixkit.co/sfx/preview/mixkit-fast-small-sweep-transition-166.mp3"></audio>
-<audio id="winSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
+<audio id="rollSound" src="Drumroll 15s.mp3"></audio>
+<audio id="winSound" src="mixkit-ethereal-fairy-win-sound-2019.wav"></audio>
+
 
 <!-- LIBRARY -->
 <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
@@ -67,4 +68,9 @@
 
 <script src="script.js"></script>
 </body>
+
+<footer class="footer">
+    © 2025 – Bagus Surya Bumi · SOW1
+</footer>
+
 </html>
