--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <!-- AUDIO -->
-<audio id="rollSound" src="Drumroll 15s.mp3"></audio>
+<audio id="rollSound" src="Drumroll-15s.MP3"></audio>
 <audio id="winSound" src="mixkit-ethereal-fairy-win-sound-2019.wav"></audio>
 
 
@@ -74,3 +74,4 @@
 </footer>
 
 </html>
+
